hphp/hack/test/typecheck/trait_priv_extends1.php.exp
File "trait_priv_extends1.php", line 17, characters 20-20:
The method `f` is not compatible with the overridden method (Typing[4341])
  File "trait_priv_extends1.php", line 17, characters 20-20:
  Method `f` has type `(function(): string)` in `C`
  File "trait_priv_extends1.php", line 5, characters 20-20:
  But is has type `(function(): int)` in parent `T`
  File "trait_priv_extends1.php", line 17, characters 20-20:
  Type `(function(): string)` is not a subtype of `(function(): int)`
  File "trait_priv_extends1.php", line 5, characters 25-27:
  Expected `int`
  File "trait_priv_extends1.php", line 17, characters 25-30:
  But got `string`
